--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Tables - SB Admin</title>
+        <title>Dashboard - SB Admin</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -18,6 +18,7 @@
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
            
+            <!-- Navbar-->
             <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
@@ -42,11 +43,10 @@
                             
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                profile
+                                Profile
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
-                                
                                 <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
                                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
                                         Authentication
@@ -55,12 +55,12 @@
                                     <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
                                             <a class="nav-link" href="login.html">Login</a>
-                                            
+                                          
                                             <a class="nav-link" href="password.html">Forgot Password</a>
                                         </nav>
                                     </div>
-                                   
-                                
+                                    
+                                  
                                 </nav>
                             </div>
                             <div class="sb-sidenav-menu-heading">Addons</div>
@@ -72,76 +72,107 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Purchase Orders
                             </a>
-                            <a class="nav-link" href="vendor.html">
+                            <a class="nav-link" href="tables.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Vendors Profile
                             </a>
-                            
+                            </a>
                         </div>
                     </div>
-                   
+                    <div class="sb-sidenav-footer">
+                        <div class="small">Logged in as:</div>
+                        Start Bootstrap
+                    </div>
                 </nav>
             </div>
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
-                        <h1 class="mt-4">Tables</h1>
+                        <h1 class="mt-4">Dashboard</h1>
                         <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                            <li class="breadcrumb-item active">Tables</li>
+                            <li class="breadcrumb-item active">Dashboard</li>
                         </ol>
-                        
-                        <div class="card mb-4">
+                       
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        <i class="fas fa-chart-area me-1"></i>
+                                        Purchase
+                                    </div>
+                                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                                </div>
+                            </div>
+                            <div class="col-xl-6">
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        <i class="fas fa-chart-bar me-1"></i>
+                                        Performance
+                                    </div>
+                                    <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-6">
                             <div class="card-header">
                                 <i class="fas fa-table me-1"></i>
-                                Purchase Orders
+                                Vendors Profile
                             </div>
                             <div class="card-body">
                                 <table id="datatablesSimple">
                                     {% extends 'base.html' %}
 
-                                    {% block content %}
-                                    <h1>Purchase Orders</h1>
-                                    <table class="table">
-                                        <thead>
-                                            <tr>
-                                                <th>Vendor</th>
-                                                <th>Order Date</th>
-                                                <th>Total Amount</th>
-                                                <th>Delivery Date</th>
-                                                <th>Actions</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            {% for purchase_order in purchase_orders %}
-                                            <tr><tfoot>
-                                                <td>{{ purchase_order.vendor.name }}</td>
-                                                <td>{{ purchase_order.order_date }}</td>
-                                                <td>{{ purchase_order.total_amount }}</td>
-                                                <td>{{ purchase_order.delivery_date }}</td>
-                                                <td>
-                                                    <a href="#" class="btn btn-primary btn-sm">View</a>
-                                                    <a href="#" class="btn btn-secondary btn-sm">Edit</a>
-                                                    <a href="#" class="btn btn-danger btn-sm">Delete</a>
-                                                </td>
-                                            </tr>
-                                        </tfoot>
-                                            {% endfor %}
-                                        </tbody>
-                                    </table>
-                                    {% endblock %}
-                            </div>
-                        </div>
-                    </div>
+{% block content %}
+  <h1>Vendors</h1>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Phone</th>
+        <th>Address</th>
+        <th>Vendor Code</th>
+        <th>Purchase Orders</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for vendor in vendors %}
+        <tr>
+          <td>{{ vendor.name }}</td>
+          <td>{{ vendor.email }}</td>
+          <td>{{ vendor.phone }}</td>
+          <td>{{ vendor.address }}</td>
+          <td>{{ vendor.vendor_code }}</td>
+          <td>
+            {% if vendor.purchase_orders.all %}
+              <ul class="list-unstyled">
+                {% for order in vendor.purchase_orders.all %}
+                  <li>
+                    Order #{{ order.order_number }} - ${{ order.total_amount }} - Delivery: {{ order.delivery_date }}
+                  </li>
+                {% endfor %}
+              </ul>
+            {% else %}
+              No purchase orders
+            {% endif %}
+          </td>
+          <td>
+            <a href="#" class="btn btn-primary btn-sm">View</a>
+            <a href="#" class="btn btn-secondary btn-sm">Edit</a>
+            <a href="#" class="btn btn-danger btn-sm">Delete</a>
+        </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+{% endblock %}
                     
                 </main>
-                <div class="card mb-4">
-                    <div class="card-body">
-                        DataTables is a third party plugin that is used to generate the demo table below. For more information about DataTables, please visit the
-                        <a target="_blank" href="https://datatables.net/">official DataTables documentation</a>
-                        .
-                    </div>
-                </div>
+
+                
+
+                
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
@@ -158,6 +189,9 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="js/scripts.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+        <script src="assets/demo/chart-area-demo.js"></script>
+        <script src="assets/demo/chart-bar-demo.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
         <script src="js/datatables-simple-demo.js"></script>
     </body>
